# 314FinalProject

./: .gitignore  README.md  playground.ipynb  pyproject.toml  setup.cfg  setup.py
314_final/: assets.py
314_final.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
model_results/: randomforest_results.json
src/314_final/: __init__.py
src/final_314/: __init__.py  assets.py
test/: extra_test_assets.py  test_assets.py
tmp0ftkly5u/history/: runs.db
tmp0ftkly5u/history/runs/: 4d01c30d-b85b-4fe9-82b1-9a6cac72d8da.db  index.db
tmp0ftkly5u/schedules/: schedules.db
tmp0ftkly5u/storage/4d01c30d-b85b-4fe9-82b1-9a6cac72d8da/compute_logs/: elakqxiu.err
tmp323_jv7e/history/: runs.db
tmp323_jv7e/history/runs/: 02210249-89a6-4383-a43d-f7740b97d5c9.db  13488aea-3256-4aa9-81ae-48a804ef785b.db  29a63c14-7efa-41c6-93f7-5cd999c765ff.db  2fddc33d-57ed-4f7b-92bb-96630a4e6023.db  7bb89d11-690a-4a8a-b5be-01e31ad7831e.db  7bbbb067-f4dd-42a9-9da5-b969a68a8fa3.db  b9715184-de57-4115-9174-f30265685dd7.db  e94bcfbb-4ae4-495e-8245-d00c23989668.db  ec2cb08a-ce4a-4690-a384-edb311eba504.db  index.db
tmp323_jv7e/schedules/: schedules.db
tmp323_jv7e/storage/02210249-89a6-4383-a43d-f7740b97d5c9/compute_logs/: ddimlgsu.err
tmpa4fhamdf/history/: runs.db
tmpa4fhamdf/history/runs/: index.db
tmpa4fhamdf/schedules/: schedules.db
tmpiud9usj9/history/: runs.db
tmpiud9usj9/history/runs/: index.db
tmpiud9usj9/schedules/: schedules.db
tmpmhw5uuno/history/: runs.db
tmpmhw5uuno/history/runs/: index.db
tmpmhw5uuno/schedules/: schedules.db
(+8 files in other folders)
