[project]
name = "final_314"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "pkirti33", email = "kirti.p@wustl.edu" }
]
dependencies = [
    "dagster>=1.7.1",
    "dagster-cloud>=1.7.1",
    "pytest>=8.1.1",
    "kaggle>=1.6.11",
    "pandas>=2.0.3",
    "boxsdk>=3.9.2",
    "dagster-webserver>=1.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/final_314"]

[tool.dagster]
module_name = "final_314"
